GNOME Bugzilla – Bug 755016
Fix jittery rendering with GDK Clutter backend on X11
Last modified: 2015-09-15 10:52:39 UTC
Please see the patch, this goes with an earlier Clutter change : https://bugzilla.gnome.org/show_bug.cgi?id=754993
Created attachment 311318 [details] [review] embed: capture configure event to forward them to the gdk backend on x11 This changes works in conjunction with a Clutter change [1] to ensure rendering is correctly synchronized at the different level of the stack. [1] : https://git.gnome.org/browse/clutter/commit/?id=ee98a5bbe8ad21519d5e368ca5b2336e5d1da880
Review of attachment 311318 [details] [review]: Okay.
Review of attachment 311318 [details] [review]: Pushed to master.