embed: capture configure event to forward them to the gdk backend on x11

This changes works in conjunction with a Clutter change [1] to ensure
rendering is correctly synchronized at the different level of the stack.

[1] : https://git.gnome.org/browse/clutter/commit/?id=ee98a5bbe8ad21519d5e368ca5b2336e5d1da880

https://bugzilla.gnome.org/show_bug.cgi?id=755016